--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:background="@color/background"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:padding="30dip"
+  android:orientation="horizontal"
+  >
+  <LinearLayout
     android:orientation="vertical"
+    android:layout_height="wrap_content"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_gravity="center"
     >
-	<TextView 
-	  android:layout_width="fill_parent" 
-	  android:layout_height="wrap_content" 
-    android:text="@string/main_title"	
-    />
-  <Button
-  	android:layout_width="fill_parent"
-   	android:layout_height="wrap_content"
-   	android:text="@string/new_game_label"
-    />
-  <Button
-   	android:layout_width="fill_parent"
-   	android:layout_height="wrap_content"
-   	android:text="@string/continue_game_label"
-    />
-  <Button 
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/about_label" 
-    />  
-  <Button 
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/exit_label" 
-    />
+    <TextView 
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content"
+      android:layout_gravity="center"
+      android:layout_marginBottom="25dip" 
+      android:text="@string/main_title" 
+      android:textSize="24.5sp"
+      />
+    <Button
+      android:id="@+id/new_game_button"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/new_game_label"
+      />
+    <Button
+      android:id="@+id/continue_game_button"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/continue_game_label"
+      />
+    <Button 
+      android:id="@+id/about_button"
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="@string/about_label" 
+      />  
+    <Button 
+      android:id="@+id/exit_button"
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="@string/exit_label" 
+      />
+  </LinearLayout>
 </LinearLayout>
