--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -21,16 +21,22 @@
       android:textSize="24.5sp"
       />
     <Button
-      android:id="@+id/new_game_button"
+      android:id="@+id/score_us_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:text="@string/new_game_label"
+      android:text="@string/score_us_label"
       />
     <Button
-      android:id="@+id/continue_game_button"
+      android:id="@+id/score_them_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:text="@string/continue_game_label"
-      /> 
+      android:text="@string/score_them_label"
+      />
+    <Button
+      android:id="@+id/reset_button"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/reset_label"
+      />
   </LinearLayout>
 </LinearLayout>
