--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -20,6 +20,16 @@
       android:text="@string/main_title" 
       android:textSize="24.5sp"
       />
+    <TextView 
+      android:text="" 
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content" 
+      android:id="@+id/them_score_label"/>
+    <TextView 
+      android:text="" 
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content" 
+      android:id="@+id/us_score_label" />
     <Button
       android:id="@+id/score_us_button"
       android:layout_width="fill_parent"
