--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,7 @@
-<resources><color name="background">#3500ffff</color>
- 
-
-
+<resources>
+  <color name="background">#F5F5F5</color>
+  <color name="title_color">#B22222</color>
+  <color name="us_score_color">#4B0082</color>
+  <color name="them_score_color">#006400</color>
+  <color name="score_color">#CCCCCC</color>
 </resources>
